# Dusk

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
cmake/: dependencies.cmake
dependency/glad/include/glad/: glad.h
dependency/glad/src/: glad.c
docs/: Coordinate Space.md  Engine.md  OpenGL.md  Phong Shading.md
include/: Dusk.hpp  dusk.hpp
include/Dusk/: Assert.hpp  Common.hpp  Log.hpp  PlatformDetection.hpp
include/Dusk/Core/Application/: Application.hpp  ImGuiLayer.hpp  Layer.hpp  LayerStack.hpp
include/Dusk/Core/Event/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
include/Dusk/Core/Window/: Window.hpp  WindowBase.hpp
include/Dusk/Renderer/: Buffer.hpp  FrameBuffer.hpp  GraphicsContext.hpp  Input.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
include/Dusk/Renderer/Camera/: Camera.hpp  CameraUtils.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp  TrackBall.hpp
include/Dusk/Renderer/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLFrameBuffer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp
include/Dusk/Utils/: KeyCode.hpp  MouseCode.hpp  Timer.hpp  UUID.hpp  Utils.hpp
include/dusk/: assert.hpp  common.hpp  log.hpp
include/dusk/core/application/: ImGui-layer.hpp  application.hpp  layer-stack.hpp  layer.hpp
include/dusk/core/event/: application-event.hpp  event-dispatcher.hpp  event.hpp  key-event.hpp  mouse-event.hpp  window-event.hpp
include/dusk/core/utils/: indexed-map.hpp  mouse-code.hpp  range.hpp  timer.hpp  zip.hpp
include/dusk/core/window/: window-base.hpp  window-props.hpp  window.hpp
include/dusk/renderer/: buffer.hpp  framebuffer.hpp  graphics-context.hpp  input.hpp  render-command.hpp  renderer-2D.hpp  renderer-API.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex-array.hpp
include/dusk/renderer/camera/: camera-utils.hpp  camera.hpp  orthographic-camera.hpp  perspective-camera.hpp  track-ball.hpp
include/dusk/renderer/opengl/: opengl-buffer.hpp  opengl-context.hpp  opengl-framebuffer.hpp  opengl-renderer-API.hpp  opengl-shader.hpp  opengl-texture.hpp  opengl-vertex-array.hpp
include/dusk/scene/: scene.hpp
include/dusk/scene/camera/: camera-utils.hpp  camera.hpp  orthographic-camera.hpp  perspective-camera.hpp  track-ball.hpp
include/dusk/scene/component/: component.hpp
include/dusk/scene/entity/: entity.hpp
include/dusk/utils/: for-each.hpp  indexed-map.hpp  key-code.hpp  mouse-code.hpp  range.hpp  timer.hpp  utils.hpp  uuid.hpp  zip.hpp
src/: CMakeLists.txt  Log.cpp  log.cpp
src/Core/: CMakeLists.txt
src/Core/Application/: Application.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp
src/Core/Event/: Event.cpp  KeyEvent.cpp  MouseEvent.cpp  WindowEvent.cpp
src/Core/Window/: Window.cpp  WindowBase.cpp
src/Renderer/: Buffer.cpp  CMakeLists.txt  FrameBuffer.cpp  GraphicsContext.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
src/Renderer/Camera/: Camera.cpp  CameraUtils.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  TrackBall.cpp
src/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLInput.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
src/Utils/: CMakeLists.txt  Timer.cpp  UUID.cpp  Utils.cpp
src/core/: CMakeLists.txt
src/core/application/: ImGui-layer.cpp  application.cpp  layer-stack.cpp  layer.cpp
src/core/event/: event.cpp  key-event.cpp  mouse-event.cpp  window-event.cpp
src/core/utils/: timer.cpp  utils.cpp  uuid.cpp
src/core/window/: window-base.cpp  window.cpp
src/renderer/: CMakeLists.txt  buffer.cpp  framebuffer.cpp  graphics-context.cpp  render-command.cpp  renderer-2D.cpp  renderer-API.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex-array.cpp
src/renderer/camera/: camera-utils.cpp  camera.cpp  orthographic-camera.cpp  perspective-camera.cpp  track-ball.cpp
src/renderer/opengl/: opengl-buffer.cpp  opengl-context.cpp  opengl-framebuffer.cpp  opengl-input.cpp  opengl-renderer-API.cpp  opengl-shader.cpp  opengl-texture.cpp  opengl-vertex-array.cpp
src/scene/: scene.cpp
src/scene/camera/: camera-utils.cpp  camera.cpp  orthographic-camera.cpp  perspective-camera.cpp  track-ball.cpp
src/scene/entity/: entity.cpp
src/utils/: timer.cpp  utils.cpp  uuid.cpp
